<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:customfont="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:cardCornerRadius="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="20dp">


            <AutoCompleteTextView
                android:id="@+id/breeds_auto_complete_view"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/edittext_breed_background"
                android:inputType="text"
                android:hint="@string/your_favorite_breed"
                android:singleLine="true"
                android:textSize="16sp"
                customfont:customTypeface="EMPRINT_REGULAR" />


            <Button
                android:id="@+id/continue_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/breeds_auto_complete_view"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:text="@string/continue_button_text"
                android:textAllCaps="true"
                android:textColor="@color/blue"
                android:textSize="16sp" />

            <Button
                android:id="@+id/close_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/breeds_auto_complete_view"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/continue_btn"
                android:gravity="end"
                android:text="@string/cancel_button_text"
                android:textAllCaps="true" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>